@@ -50,6 +50,7 @@ ViSP 2.6.1 (under development)
      - [12591] Seg fault when using setCleanPreviousImage() from 
        vpImageSimulator
      - [12739] Problem initialising a vpMeEllipse
+     - [13014] Bug in vpCalibration::calibVVSMulti() jacobian
 ----------------------------------------------
 ViSP 2.6.0 (released September 23rd, 2010)
   - License:
